Fix alignment in main

--- a/main.css
+++ b/main.css
@@ -33,6 +33,17 @@ menu {
 
 main {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+main form {
+    margin-left: 2em;
+    margin-right: 2em;
+    display: flex;
     flex-direction: column;
-    align-items: center;
+}
+
+form input {
+    margin-bottom: 1em;
 }
